# MAXIMUS

./: .coverage  .github-copilot.yml  .gitignore  CLAUDE.md  README.md  SECURITY_CHECKLIST_TODAY.md  SECURITY_GUIDE.md  coverage.xml
backend/services/: batch_migrate.sh  fix_multiline_prints.py  migrate_prints.py
backend/services/meta_orchestrator/: .coverage  Dockerfile  README.md  __init__.py  pyproject.toml
backend/services/meta_orchestrator/api/: __init__.py  routes.py
backend/services/meta_orchestrator/core/: __init__.py  agent_registry.py  gemini_client.py  orchestrator.py  task_decomposer.py  world_model.py
backend/services/meta_orchestrator/core/world_model/: __init__.py  heuristics.py  models.py  simulator.py
backend/services/meta_orchestrator/plugins/: __init__.py  base.py
backend/services/meta_orchestrator/tests/: __init__.py  test_agent_registry.py  test_api_routes.py  test_gemini_client.py  test_orchestrator.py  test_task_decomposer.py  test_world_model.py
deployments/kubernetes/: maximus-deployment.yaml  (+1 more)
docs/: GEMINI3_PRO_RESEARCH.md  MAINTENANCE_CHECKLIST_JAN2025.md  MAXIMUS_ARCHITECTURE_V3.md  MAXIMUS_CONSCIOUSNESS_AUDIT.md  MAXIMUS_SDK_DESIGN.md  MIGRATION_COMPLETE_2025_11_30.md  MIGRATION_MANIFEST_2025_11_30.md  PHASE2B_VALIDATION_REPORT.md  PROMETHEUS_CLI_AUDIT_REPORT.md  README.md  VALIDATION_SPRINT2_BATCH1.md  integracao-prometheus-agent.md  plano-sonnet.md  refino-final-inicial-SNAPSHOT.md  refino-final-inicial.md
landing/: .firebaserc  index.html
scripts/: audit_secrets.sh  benchmark_reflection.py  start_qdrant.sh
(+403 files in other folders)
